--- a/principal-page-dark-mode.css
+++ b/principal-page-dark-mode.css
@@ -133,7 +133,7 @@ html {
     padding: 10% 3% 5% 3%; /*arriba-derecha-abajo-izquierda*/
     text-align: center;
     border-radius: 1.562rem; 
-    height: 18.05rem;
+    height: 18.5rem;
     width: 19.375rem;
     resize: none;
     outline: none;
@@ -161,6 +161,7 @@ html {
     justify-content: center;
     font-size: 0.8rem;
     color: var(--fifth-color);
+    margin-bottom: 1rem;
 }
 .footer a {
     text-decoration: none;
