--- a/principal-page.css
+++ b/principal-page.css
@@ -10,7 +10,6 @@
     --grey-hover-decry: #c9c7c7;
     --grey-hover-encry: #343434;
     --font-size: 16px; /* 1rem = 16px */
-    --font-size-small: 70%;
 }
 
 * {
@@ -55,7 +54,7 @@ html {
 .textarea-input {
     margin-top: 1%;
     margin-bottom: 1%;
-    padding: 6% 2rem 5% 2rem; /*arriba-derecha-abajo-izquierda*/
+    padding: 6% 9% 5% 9%; /*arriba-derecha-abajo-izquierda*/
     width: 36rem;
     height: 14.5rem;
     border: 0.3rem solid var(--first-color);
@@ -77,6 +76,7 @@ html {
 .instructions {
     font-size: 0.85rem;
     display: flex;
+    color: var(--second-color);
 }
 
 .instructions img {
@@ -132,7 +132,7 @@ html {
     padding: 10% 3% 5% 3%; /*arriba-derecha-abajo-izquierda*/
     text-align: center;
     border-radius: 1.562rem; 
-    height: 18.05rem;
+    height: 18.5rem;
     width: 19.375rem;
     resize: none;
     outline: none;
@@ -160,11 +160,12 @@ html {
     justify-content: center;
     font-size: 0.8rem;
     color: var(--fifth-color);
+    margin-bottom: 1rem;
 }
 .footer a {
     text-decoration: none;
     font-size: 0.9rem;
-    color: var(--second-color);
+    color: var(--first-color);
     font-weight: bold;
 }
 
@@ -209,9 +210,9 @@ a:hover {
     }
 
     .textarea-input {
-        width: 27rem; 
+        width: 25.8rem; 
         height: 13rem;
-        margin-left: 2.6rem;
+        margin-left: 0.5rem;
     }
 
     .instructions-and-bottons {
