--- a/principal-page-dark-mode.css
+++ b/principal-page-dark-mode.css
@@ -1,13 +1,13 @@
 :root {
-    --background:#191919;
+    --background:#282828;
     --first-color: #5e17eb;
     --second-color: #242321;
     --third-color:#b0b0b0;
-    --fourth-color: #ffffff;
+    --fourth-color: #f6f6f6;
     --fifth-color: #717171;
     --sixth-color: #b97fb7;
-    --seventh-color: #000000;
-    --eighth-color: #2e2e2d;
+    --seventh-color: #ebebeb;
+    --eighth-color: #353535;
     --grey-hover-decry: #ccc9c9;
     --grey-hover-encry: #525252;
     --font-size: 16px; /* 1rem = 16px */
@@ -62,7 +62,7 @@ html {
     border-radius: 1.56rem;
     resize: none;
     outline: none;
-    background-color: var(--fourth-color);
+    background-color: var(--eighth-color);
     font-size: 1.1rem;
 }
 
