--- a/principal-page.css
+++ b/principal-page.css
@@ -7,6 +7,7 @@
     --fifth-color: #717171;
     --sixth-color: #b97fb7;
     --seventh-color: #000000;
+    --eighth-color: #ffffff;
     --grey-hover-decry: #c9c7c7;
     --grey-hover-encry: #343434;
     --font-size: 16px; /* 1rem = 16px */
